# ahk-manager

./: .gitignore  CLAUDE.md  Default.ahk  Plan.md  README.md  Untitled.ahk  build.bat  index.html  main.py  package-lock.json  package.json  playwright.config.ts  profiles.json  requirements.txt  run-dev.bat  run-tauri.bat  vite.config.ts
app/core/: ahk_generator.py  ahk_runner.py  profile_store.py
app/ui/: hotkey_dialog.py  hotkey_table.py  main_window.py  profile_panel.py  settings_dialog.py
app/utils/: ahk_keys.py  key_recorder.py
design/: AHK Manager.html  app.jsx  index.html  screens.jsx  styles.css  ui.jsx
e2e/: smoke.test.ts  tauri-mock.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  gen_icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/__tests__/: ahk-codegen.test.ts  ahk-trigger.test.ts
src/components/ui/: ActionTag.tsx  Button.tsx  EditableText.tsx  Icons.tsx  Keycap.tsx  Modal.tsx  StatusPill.tsx  Toggle.tsx  TriggerRecorder.tsx  index.ts
src/features/hotkeys/: ConfirmDialog.tsx  HotkeyModal.tsx  HotkeyTable.tsx
src/features/preview/: PreviewPane.tsx  ahk-codegen.ts
src/features/profiles/: Sidebar.tsx
src/features/settings/: SettingsModal.tsx
src/features/toast/: ToastProvider.tsx
src/lib/: accent.ts  ahk-parser.ts  ahk-trigger.ts  keyboard.ts  tauri.ts  types.ts
src/store/: profiles.ts  runtime.ts  settings.ts
src/styles/: app.css  tokens.css
